--- a/vignettes/snotelr-vignette.Rmd
+++ b/vignettes/snotelr-vignette.Rmd
@@ -36,7 +36,7 @@ cran <- check_cran()
 # for local render set to true
 # mainly important for rendering
 # a website using pkgdown
-#cran <- TRUE
+cran <- TRUE
 ```
 
 ## Introduction
