--- a/vignettes/snotelr-vignette.Rmd
+++ b/vignettes/snotelr-vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "snotelr"
+title: "snotelr functionality"
 author: "Koen Hufkens"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
